modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     
                     <h1 class="display-4 text-white fw-bold mb-4">We Can Fix it, Almost As Fast as You can Break it.</h1>
                     <p class="text-white mb-4">Fast repair for your broken devices, Door to door delivery, Technicians will able to repair your device in just minutes. We'll normally get your phone as fast as a lightning.</p>
-                    <a href="" class="btn btn-light py-sm-3 px-sm-4 rounded-pill me-3" id="lrn-btn">Message Us<i class="fab fa-telegram fa-xl ms-1"></i></a>
-                    <a href="" class="btn btn-outline-light py-sm-3 px-sm-4 rounded-pill">Register Now<i class="fa fa-user fa-lg ms-1"></i></a>
+                    <a href="" class="btn btn-light py-sm-3 px-sm-4 rounded-pill me-3" id="lrn-btn">Message Us</a>
+                    <a href="" class="btn btn-outline-light py-sm-3 px-sm-4 rounded-pill">Register Now</a>
                 </div>
                 <div class="col-lg-6 align-self-end text-center text-lg-end">
                     <img class="img-fluid" src="./res/repairlogo.png" alt="">
