--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="x-icon" href="./res/logo.png">
-    <link rel="stylesheet" href="./css/services.css">
+    <link rel="stylesheet" href="./css/aboutus.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -32,9 +32,9 @@
 
               <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="services.html">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="devices.html">Devices</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a class="active" href="aboutus.html">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
               </ul>
           </nav>
@@ -42,7 +42,7 @@
     </header>
     <!--Navbar Ends-->
 
-    <h2>Services Page</h2>
+    <h2>About Us Page</h2>
     
 </body>
 </html>
