--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="shortcut icon" type="x-icon" href="./res/logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -34,8 +36,8 @@
                   <ul class="nav-list">
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="#">Devices</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="devices.html">Devices</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                   </ul>
               </nav>
@@ -334,7 +336,7 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-3">
                     <a href="index.html" class="brand">
-                        <h1 class="text-white">RoyTech</h1>
+                       <h1 class="text-white">RoyTech</h1>
                     </a>
                     <p class="mb-0 mt-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi aliquid fugit ipsum voluptatum eveniet architecto tenetur consequuntur quae assumenda quidem! Officia, expedita enim repellat nobis consectetur eum obcaecati ea nulla.</p>
                 </div>
@@ -377,12 +379,12 @@
                     <div class="col-md-6 text-center text-md-start">
                         &copy; <a class="border-bottom" href="#">RoyTech</a>, All Right Reserved.
 
-                         Distributed By <a class="border-bottom" href="index.html">RoyTeam</a>
+                         Distributed By <a class="border-bottom" href="index.html">RoyTech</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
                             <a href="">Home</a>
-                            <a href="">Cookies</a>
+                            <a href="">Inquire</a>
                             <a href="">Help</a>
                             <a href="">FAQs</a>
                         </div>
