modified:   css/devices.css 	modified:   css/services.css 	modified:   css/styles.css 	modified:   devices.html 	modified:   index.html 	new file:   res/auth.svg 	new file:   res/client1.jpg 	new file:   res/client2.jpg 	new file:   res/client3.jpg 	new file:   res/client4.jpg 	new file:   res/devices.jpg 	new file:   res/lcdrep.svg 	new file:   res/lowbatt.svg 	new file:   res/micro.jpg 	new file:   res/osupdate.svg 	new file:   res/product.svg 	new file:   res/station.jpeg 	new file:   res/troubleshoot.svg 	modified:   services.html

--- a/devices.html
+++ b/devices.html
@@ -42,7 +42,17 @@
     </header>
     <!--Navbar Ends-->
 
-    <h2>Devices Page</h2>
+    <!--Banner Start-->
+
+<div class="masthead" style="background-image: url('./res/devices.jpg');"></div>
+<div class="content-srv">
+  <h2>Devices</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eos laborum reiciendis corporis nisi iure. Quia, sequi consequuntur incidunt culpa quidem voluptatum ut alias reprehenderit. Unde iusto obcaecati totam? Debitis.</p>
+    <input type="button" class="btn btn-primary px-4 py-2" value="Inquire Now">
+</div>
+
+    <!--Banner End-->
+
     
 </body>
 </html>
