--- a/services.html
+++ b/services.html
@@ -42,7 +42,169 @@
     </header>
     <!--Navbar Ends-->
 
-    <h2>Services Page</h2>
-    
+    <!--Banner Start-->
+
+<div class="masthead" style="background-image: url('./res/station.jpeg');"></div>
+<div class="content-srv">
+  <h2>Our <span>Services</span></h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eos laborum reiciendis corporis nisi iure. Quia, sequi consequuntur incidunt culpa quidem voluptatum ut alias reprehenderit. Unde iusto obcaecati totam? Debitis.</p>
+    <input type="button" class="btn btn-primary px-4 py-2" value="Inquire Now">
+</div>
+
+
+    <!--Banner End-->
+
+   <!--Our Services Start-->
+<div class="container-fluid our-services mt-5 mb-5">
+<div class="container">
+   
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <div class="icon-wrapper">
+          <i class="fa-solid fa-mobile"></i>
+        </div>
+        <h3>Mobile Repair</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
+          consequatur necessitatibus eaque.
+        </p>
+        <input type="button" class="btn btn-primary" value="Inquire Now">
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <div class="icon-wrapper">
+          <i class="fa-solid fa-laptop"></i>
+        </div>
+        <h3>Laptop Repair</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
+          consequatur necessitatibus eaque.
+        </p>
+        <input type="button" class="btn btn-primary" value="Inquire Now">
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <div class="icon-wrapper">
+          <i class="fas fa-wrench"></i>
+        </div>
+        <h3>Hardware Diagnostic</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
+          consequatur necessitatibus eaque.
+        </p>
+        <input type="button" class="btn btn-primary" value="Inquire Now">
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <div class="icon-wrapper">
+          <i class="fa-solid fa-stethoscope"></i>
+        </div>
+        <h3>Free Check Up</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
+          consequatur necessitatibus eaque.
+        </p>
+        <input type="button" class="btn btn-primary" value="Inquire Now">
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <div class="icon-wrapper">
+          <i class="fa-solid fa-broom"></i>
+        </div>
+        <h3>Service Cleaning</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
+          consequatur necessitatibus eaque.
+        </p>
+        <input type="button" class="btn btn-primary" value="Inquire Now">
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <div class="icon-wrapper">
+          <i class="fa-solid fa-microchip"></i>
+        </div>
+        <h3>Motherboard Level</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
+          consequatur necessitatibus eaque.
+        </p>
+        <input type="button" class="btn btn-primary" value="Inquire Now">
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+    <!--Our Services End-->
+
+   <!-- Footer Start -->
+   <div class="container-fluid text-white-50 pt-3 footer">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-md-6 col-lg-3">
+                <a href="index.html" class="brand">
+                   <h1 class="text-white">RoyTech</h1>
+                </a>
+                <p class="mb-0 mt-3 text-white-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi aliquid fugit ipsum voluptatum eveniet architecto tenetur consequuntur quae assumenda quidem! Officia, expedita enim repellat nobis consectetur eum obcaecati ea nulla.</p>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <h5 class="text-white mb-4">Get In Touch</h5>
+                <p class="text-white-50"><i class="fa fa-map-marker-alt me-3"></i>MacArthur, Leyte</p>
+                <p class="text-white-50"><i class="fa fa-phone-alt me-3"></i>+63 991 5200 456</p>
+                <p class="text-white-50"><i class="fa fa-envelope me-3"></i>roytech@gmail.com</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-x-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <h5 class="text-white mb-4">Popular Link</h5>
+                <a class="btn btn-link" href="">About Us</a>
+                <a class="btn btn-link" href="">Contact Us</a>
+                <a class="btn btn-link" href="">Devices</a>
+                <a class="btn btn-link" href="">Terms & Condition</a>
+                <a class="btn btn-link" href="">Inquiries</a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <h5 class="text-white mb-4">Our Services</h5>
+                <a class="btn btn-link" href="">Free Check Up</a>
+                <a class="btn btn-link" href="">Water Damage</a>
+                <a class="btn btn-link" href="">Mother Board Level Repair</a>
+                <a class="btn btn-link" href="">Data Recovery</a>
+                <a class="btn btn-link" href="">OS Upgrade</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start">
+                    &copy; <a class="border-bottom" href="#">RoyTech</a>, All Right Reserved.
+
+                     Distributed By <a class="border-bottom" href="index.html">RoyTech</a>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <div class="footer-menu">
+                        <a href="">Home</a>
+                        <a href="">Inquire</a>
+                        <a href="">Help</a>
+                        <a href="">FAQs</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
 </body>
 </html>
