new file:   css/laptopdevices.css 	new file:   css/printerdevices.css 	modified:   devices.html 	new file:   laptopdevices.html 	new file:   printerdevices.html 	modified:   services.html

--- a/laptopdevices.html
+++ b/laptopdevices.html
@@ -67,102 +67,102 @@
       
       <table class="table table-hover align-middle mb-5">
         <caption class="cap">
-          <a style="text-decoration: none;" href="laptopdevices.html"><button type="button" class="btn btn-primary me-3">List of Laptops</button></a> 
-          <a style="text-decoration: none;" href="printerdevices.html"><button type="button" class="btn btn-primary">List of Printers</button></a> 
-      </caption>
+            <a style="text-decoration: none;" href="printerdevices.html"><button type="button" class="btn btn-primary">List of Printers</button></a> 
+            <a style="text-decoration: none;" href="devices.html"><button type="button" class="btn btn-primary me-3">List of Smartphones</button></a> 
+        </caption>
         <thead class="table-dark">
           <tr>
-            <th scope="col">Xiaomi</th>
+            <th scope="col">Acer</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
 
           <tr>
-            <td>Xiaomi 13 Ultra</td>
+            <td>Acer Aspire</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
           <tr>
-            <td>Xiaomi 13 Lite</td>
+            <td>Acer Swift 3</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
 
         <tr>
-          <td>Xiaomi 13 Pro</td>
+          <td>Acer Nitro 5</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi 13</td>
+          <td>Acer Predator Triton</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi 12T Pro</td>
+          <td>Acer Aspire 7</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <thead class="table-dark">
           <tr>
-            <th scope="col">Redmi</th>
+            <th scope="col">Lenovo</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
 
           <tr>
-            <td>Redmi 12 5G</td>
+            <td>Ideapad</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
           <tr>
-            <td>Redmi Note 12 Pro</td>
+            <td>Thinkpad P Series</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
 
         <tr>
-          <td>Redmi Note 11 Pro</td>
+          <td>Thinkpad X Series</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi Note 11</td>
+          <td>Thinkpad Flex Series</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi Note 10</td>
+          <td>Thinkpad E Series</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <thead class="table-dark">
           <tr>
-            <th scope="col">POCO</th>
+            <th scope="col">HP</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
 
           <tr>
-            <td>POCO F5 Series</td>
+            <td>HP Pavilion</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
           <tr>
-            <td>POCO X5 Series</td>
+            <td>HP Spectre</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
 
         <tr>
-          <td>POCO M5s</td>
+          <td>HP ENVY 17t</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>POCO F4</td>
+          <td>Omen</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>POCO M4 GT</td>
+          <td>HP ProBook</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
@@ -201,7 +201,7 @@
               <option>LCD Replacement</option>
               <option>Battery Replacement</option>
               <option>Forgotten Password</option>
-              <option>Bypass</option>
+              <option>Operating System</option>
               <option>Mother Board Level Repair</option>
             </select>
           </div>
