--- a/printerdevices.html
+++ b/printerdevices.html
@@ -68,101 +68,101 @@
       <table class="table table-hover align-middle mb-5">
         <caption class="cap">
           <a style="text-decoration: none;" href="laptopdevices.html"><button type="button" class="btn btn-primary me-3">List of Laptops</button></a> 
-          <a style="text-decoration: none;" href="printerdevices.html"><button type="button" class="btn btn-primary">List of Printers</button></a> 
+          <a style="text-decoration: none;" href="devices.html"><button type="button" class="btn btn-primary">List of Smartphones</button></a> 
       </caption>
         <thead class="table-dark">
           <tr>
-            <th scope="col">Xiaomi</th>
+            <th scope="col">HP</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
 
           <tr>
-            <td>Xiaomi 13 Ultra</td>
+            <td>HP 2000 Series</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
           <tr>
-            <td>Xiaomi 13 Lite</td>
+            <td>HP Apollo Series</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
 
         <tr>
-          <td>Xiaomi 13 Pro</td>
+          <td>HP Deskjet Series</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi 13</td>
+          <td>HP Designjet Series</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi 12T Pro</td>
+          <td>HP Deskwriter Series</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <thead class="table-dark">
           <tr>
-            <th scope="col">Redmi</th>
+            <th scope="col">Canon</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
 
           <tr>
-            <td>Redmi 12 5G</td>
+            <td>Canon PIXMA</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
           <tr>
-            <td>Redmi Note 12 Pro</td>
+            <td>Canon Image Class</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
 
         <tr>
-          <td>Redmi Note 11 Pro</td>
+          <td>Canon G2000</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi Note 11</td>
+          <td>Canon Pixma G2010</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>Xiaomi Note 10</td>
+          <td>Canon PIXMA TR150</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <thead class="table-dark">
           <tr>
-            <th scope="col">POCO</th>
+            <th scope="col">Brother</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
 
           <tr>
-            <td>POCO F5 Series</td>
+            <td>DCP-T426W</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
           <tr>
-            <td>POCO X5 Series</td>
+            <td>HL-T4000DW</td>
             <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
           </tr>
 
         <tr>
-          <td>POCO M5s</td>
+          <td>DCP-L2550DW</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>POCO F4</td>
+          <td>MFC-J3540DW</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
         <tr>
-          <td>POCO M4 GT</td>
+          <td>DCP-T720DW</td>
           <td><button type="button" class="btn btn-success p-2" data-bs-toggle="modal" data-bs-target="#animodal"> Inquire </button></td>
         </tr>
 
@@ -198,10 +198,10 @@
             <select>
               <option hidden>Type of Inquiry</option>
               <option>Check up</option>
-              <option>LCD Replacement</option>
-              <option>Battery Replacement</option>
-              <option>Forgotten Password</option>
-              <option>Bypass</option>
+              <option>Clogged Tank</option>
+              <option>Printer Head Replacement</option>
+              <option>Scanner Replacement</option>
+              <option>Timing Belt</option>
               <option>Mother Board Level Repair</option>
             </select>
           </div>
