--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
           consequatur necessitatibus eaque.
         </p>
-        <input type="button" class="btn btn-primary" value="Inquire Now">
+        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
     </div>
     <div class="column">
@@ -82,7 +82,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
           consequatur necessitatibus eaque.
         </p>
-        <input type="button" class="btn btn-primary" value="Inquire Now">
+        <a href="laptopdevices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
     </div>
     <div class="column">
