modified:   aboutus.html 	new file:   contactus.html 	modified:   css/aboutus.css 	new file:   css/contactus.css 	modified:   devices.html 	modified:   index.html 	modified:   laptopdevices.html 	modified:   printerdevices.html 	new file:   res/Location.PNG 	new file:   res/contactus.jpg 	new file:   res/pos1.jpg 	new file:   res/pos2.jpg 	new file:   res/pos3.jpg 	new file:   res/pos4.jpg 	modified:   services.html

--- a/laptopdevices.html
+++ b/laptopdevices.html
@@ -35,7 +35,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a class="active"  href="devices.html">Devices</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
               </ul>
           </nav>
 
@@ -230,7 +230,7 @@
                 <a href="index.html" class="brand">
                    <h1 class="text-white">RoyTech</h1>
                 </a>
-                <p class="mb-0 mt-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi aliquid fugit ipsum voluptatum eveniet architecto tenetur consequuntur quae assumenda quidem! Officia, expedita enim repellat nobis consectetur eum obcaecati ea nulla.</p>
+                <p class="mb-0 mt-3">Swift device repair with Door-to-Door Service. Our skilled Technicians can restore your device in minutes. Lightning-fast phone recovery guaranteed!</p>
             </div>
             <div class="col-md-6 col-lg-3">
                 <h5 class="text-white mb-4">Get In Touch</h5>
@@ -238,29 +238,29 @@
                 <p><i class="fa fa-phone-alt me-3"></i>+63 991 5200 456</p>
                 <p><i class="fa fa-envelope me-3"></i>roytech@gmail.com</p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-x-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-github"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://twitter.com/i/flow/login"><i class="fab fa-x-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100088334353562&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/channel/UCSdufvu8HXEcX8RUDfvCtLQ"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/login"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://github.com/"><i class="fab fa-github"></i></a>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
                 <h5 class="text-white mb-4">Popular Link</h5>
-                <a class="btn btn-link" href="">About Us</a>
-                <a class="btn btn-link" href="">Contact Us</a>
-                <a class="btn btn-link" href="">Devices</a>
-                <a class="btn btn-link" href="">Terms & Condition</a>
-                <a class="btn btn-link" href="">Inquiries</a>
+                <a class="btn btn-link" href="aboutus.html">About Us</a>
+                <a class="btn btn-link" href="contactus.html">Contact Us</a>
+                <a class="btn btn-link" href="devices.html">Devices</a>
+                <a class="btn btn-link" href="services.html">Services</a>
+                
             </div>
             <div class="col-md-6 col-lg-3">
                 <h5 class="text-white mb-4">Our Services</h5>
-                <a class="btn btn-link" href="">Free Check Up</a>
-                <a class="btn btn-link" href="">Water Damage</a>
-                <a class="btn btn-link" href="">Mother Board Level Repair</a>
-                <a class="btn btn-link" href="">Data Recovery</a>
-                <a class="btn btn-link" href="">OS Upgrade</a>
+                <a class="btn btn-link" href="devices.html">Free Check Up</a>
+                <a class="btn btn-link" href="devices.html">Water Damage</a>
+                <a class="btn btn-link" href="laptopdevices.html">Mother Board Level Repair</a>
+                <a class="btn btn-link" href="laptopdevices.html">Data Recovery</a>
+                <a class="btn btn-link" href="laptopdevices.html">OS Upgrade</a>
             </div>
         </div>
     </div>
@@ -269,16 +269,16 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    &copy; <a class="border-bottom" href="#">RoyTech</a>, All Right Reserved.
+                    &copy; <a class="border-bottom" href="index.html">RoyTech</a>, All Right Reserved.
 
                      Distributed By <a class="border-bottom" href="index.html">RoyTech</a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
-                        <a href="">Home</a>
-                        <a href="">Inquire</a>
-                        <a href="">Help</a>
-                        <a href="">FAQs</a>
+                        <a href="index.html">Home</a>
+                        <a href="contactus.html">Inquire</a>
+                        <a href="contactus.html">Help</a>
+                        <a href="index.html">FAQs</a>
                     </div>
                 </div>
             </div>
