--- a/aboutus.html
+++ b/aboutus.html
@@ -35,14 +35,171 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="devices.html">Devices</a></li>
                 <li><a class="active" href="aboutus.html">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
               </ul>
           </nav>
 
     </header>
     <!--Navbar Ends-->
 
-    <h2>About Us Page</h2>
+    <!-- Team Start -->
+    <div class="container-fluid bg-light py-5">
+      <div class="container py-5">
+          <div class="row g-5 align-items-center">
+              <div class="col-lg-5">
+                  <h1 class="about" style="color: #2d3d6c;">About Us</h1>
+                  <h1 class="mb-4">Meet Our Skilled and Experienced Team Members</h1>
+                  <p class="mb-4">We hire the best and skilled individual to give you a satisfaction for your damaged devices.</p>
+              </div>
+              <div class="col-lg-7">
+                  <div class="row g-4">
+                      <div class="col-md-6">
+                          <div class="row g-4">
+                              <div class="col-12">
+                                  <div class="team-item bg-white shadow text-center rounded p-4 pt-0">
+                                      <img class="img-fluid rounded-circle p-4" src="./res/pos1.jpg" alt="">
+                                      <h5 class="mb-0">Boris Johnson</h5>
+                                      <small>Founder & CEO</small>
+                                      <div class="d-flex justify-content-center mt-3">
+                                          <a class="btn btn-cirle btn-primary m-1" href=""><i
+                                                  class="fab fa-facebook-f"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-x-twitter"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-instagram"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-linkedin-in"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="col-12">
+                                  <div class="team-item bg-white shadow text-center rounded p-4 pt-0">
+                                      <img class="img-fluid rounded-circle p-4" src="./res/pos3.jpg" alt="">
+                                      <h5 class="mb-0">Adam Crew</h5>
+                                      <small>Technician</small>
+                                      <div class="d-flex justify-content-center mt-3">
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-facebook-f"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-x-twitter"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-instagram"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-linkedin-in"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-6 pt-md-4">
+                          <div class="row g-4">
+                              <div class="col-12">
+                                  <div class="team-item bg-white shadow text-center rounded p-4 pt-0">
+                                      <img class="img-fluid rounded-circle p-4" src="./res/pos2.jpg" alt="">
+                                      <h5 class="mb-0">Kate Winslet</h5>
+                                      <small>Executive Manager</small>
+                                      <div class="d-flex justify-content-center mt-3">
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-facebook-f"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-x-twitter"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-instagram"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-linkedin-in"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="col-12">
+                                  <div class="team-item bg-white shadow text-center rounded p-4 pt-0">
+                                      <img class="img-fluid rounded-circle p-4" src="./res/pos4.jpg" alt="">
+                                      <h5 class="mb-0">Cody Gardner</h5>
+                                      <small>Quality Tester</small>
+                                      <div class="d-flex justify-content-center mt-3">
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-facebook-f"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-x-twitter"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-instagram"></i></a>
+                                          <a class="btn btn-square btn-primary m-1" href=""><i
+                                                  class="fab fa-linkedin-in"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- Team End -->
+
+  <!-- Footer Start -->
+  <div class="container-fluid text-white-50 pt-3 footer">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-md-6 col-lg-3">
+                <a href="index.html" class="brand">
+                   <h1 class="text-white">RoyTech</h1>
+                </a>
+                <p class="mb-0 mt-3">Swift device repair with Door-to-Door Service. Our skilled Technicians can restore your device in minutes. Lightning-fast phone recovery guaranteed!</p>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <h5 class="text-white mb-4">Get In Touch</h5>
+                <p><i class="fa fa-map-marker-alt me-3"></i>MacArthur, Leyte</p>
+                <p><i class="fa fa-phone-alt me-3"></i>+63 991 5200 456</p>
+                <p><i class="fa fa-envelope me-3"></i>roytech@gmail.com</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-outline-light btn-social" href="https://twitter.com/i/flow/login"><i class="fab fa-x-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100088334353562&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/channel/UCSdufvu8HXEcX8RUDfvCtLQ"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/login"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://github.com/"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <h5 class="text-white mb-4">Popular Link</h5>
+                <a class="btn btn-link" href="aboutus.html">About Us</a>
+                <a class="btn btn-link" href="contactus.html">Contact Us</a>
+                <a class="btn btn-link" href="devices.html">Devices</a>
+                <a class="btn btn-link" href="services.html">Services</a>
+                
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <h5 class="text-white mb-4">Our Services</h5>
+                <a class="btn btn-link" href="devices.html">Free Check Up</a>
+                <a class="btn btn-link" href="devices.html">Water Damage</a>
+                <a class="btn btn-link" href="laptopdevices.html">Mother Board Level Repair</a>
+                <a class="btn btn-link" href="laptopdevices.html">Data Recovery</a>
+                <a class="btn btn-link" href="laptopdevices.html">OS Upgrade</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start">
+                    &copy; <a class="border-bottom" href="index.html">RoyTech</a>, All Right Reserved.
+
+                     Distributed By <a class="border-bottom" href="index.html">RoyTech</a>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <div class="footer-menu">
+                        <a href="index.html">Home</a>
+                        <a href="contactus.html">Inquire</a>
+                        <a href="contactus.html">Help</a>
+                        <a href="index.html">FAQs</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
     
 </body>
 </html>
