--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
                 <li><a class="active" href="services.html">Services</a></li>
                 <li><a href="devices.html">Devices</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
               </ul>
           </nav>
 
@@ -47,8 +47,8 @@
 <div class="masthead" style="background-image: url('./res/station.jpeg');"></div>
 <div class="content-srv">
   <h2>Our <span>Services</span></h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eos laborum reiciendis corporis nisi iure. Quia, sequi consequuntur incidunt culpa quidem voluptatum ut alias reprehenderit. Unde iusto obcaecati totam? Debitis.</p>
-    <input type="button" class="btn btn-primary px-4 py-2" value="Inquire Now">
+  <p>Swift device repair with Door-to-Door Service. Our skilled Technicians can restore your device in minutes. Lightning-fast phone recovery guaranteed!</p>
+  <a href="devices.html"><input type="button" class="btn btn-primary px-4 py-2" value="Inquire Now"></a>
 </div>
 
 
@@ -66,8 +66,7 @@
         </div>
         <h3>Mobile Repair</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-          consequatur necessitatibus eaque.
+          Fast Repair for your Mobile Devices.
         </p>
         <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
@@ -79,8 +78,7 @@
         </div>
         <h3>Laptop Repair</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-          consequatur necessitatibus eaque.
+          Software, Hardware Issues we can fix it.
         </p>
         <a href="laptopdevices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
@@ -92,10 +90,9 @@
         </div>
         <h3>Hardware Diagnostic</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-          consequatur necessitatibus eaque.
+          We rapair hardware issues from your printers.
         </p>
-        <input type="button" class="btn btn-primary" value="Inquire Now">
+        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
     </div>
     <div class="column">
@@ -105,10 +102,9 @@
         </div>
         <h3>Free Check Up</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-          consequatur necessitatibus eaque.
+          We don't ask for payment when checking for the damaged.
         </p>
-        <input type="button" class="btn btn-primary" value="Inquire Now">
+        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
     </div>
     <div class="column">
@@ -118,10 +114,9 @@
         </div>
         <h3>Service Cleaning</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-          consequatur necessitatibus eaque.
+          this method uses after the check up of the device. to serve you a clean and smooth transaction.
         </p>
-        <input type="button" class="btn btn-primary" value="Inquire Now">
+        <a href="laptopdevices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
     </div>
     <div class="column">
@@ -131,10 +126,9 @@
         </div>
         <h3>Motherboard Level</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-          consequatur necessitatibus eaque.
+          This method is crucial, our skilled tech will check for the damaged IC.
         </p>
-        <input type="button" class="btn btn-primary" value="Inquire Now">
+        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
     </div>
   </div>
@@ -142,69 +136,69 @@
 </div>
     <!--Our Services End-->
 
-   <!-- Footer Start -->
-   <div class="container-fluid text-white-50 pt-3 footer">
-    <div class="container py-5">
-        <div class="row g-5">
-            <div class="col-md-6 col-lg-3">
-                <a href="index.html" class="brand">
-                   <h1 class="text-white">RoyTech</h1>
-                </a>
-                <p class="mb-0 mt-3 text-white-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi aliquid fugit ipsum voluptatum eveniet architecto tenetur consequuntur quae assumenda quidem! Officia, expedita enim repellat nobis consectetur eum obcaecati ea nulla.</p>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <h5 class="text-white mb-4">Get In Touch</h5>
-                <p class="text-white-50"><i class="fa fa-map-marker-alt me-3"></i>MacArthur, Leyte</p>
-                <p class="text-white-50"><i class="fa fa-phone-alt me-3"></i>+63 991 5200 456</p>
-                <p class="text-white-50"><i class="fa fa-envelope me-3"></i>roytech@gmail.com</p>
-                <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-x-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-github"></i></a>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <h5 class="text-white mb-4">Popular Link</h5>
-                <a class="btn btn-link" href="">About Us</a>
-                <a class="btn btn-link" href="">Contact Us</a>
-                <a class="btn btn-link" href="">Devices</a>
-                <a class="btn btn-link" href="">Terms & Condition</a>
-                <a class="btn btn-link" href="">Inquiries</a>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <h5 class="text-white mb-4">Our Services</h5>
-                <a class="btn btn-link" href="">Free Check Up</a>
-                <a class="btn btn-link" href="">Water Damage</a>
-                <a class="btn btn-link" href="">Mother Board Level Repair</a>
-                <a class="btn btn-link" href="">Data Recovery</a>
-                <a class="btn btn-link" href="">OS Upgrade</a>
-            </div>
-        </div>
-    </div>
+    <!-- Footer Start -->
+    <div class="container-fluid text-white-50 pt-3 footer">
+      <div class="container py-5">
+          <div class="row g-5">
+              <div class="col-md-6 col-lg-3">
+                  <a href="index.html" class="brand">
+                     <h1 class="text-white">RoyTech</h1>
+                  </a>
+                  <p class="mb-0 mt-3">Swift device repair with Door-to-Door Service. Our skilled Technicians can restore your device in minutes. Lightning-fast phone recovery guaranteed!</p>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                  <h5 class="text-white mb-4">Get In Touch</h5>
+                  <p><i class="fa fa-map-marker-alt me-3"></i>MacArthur, Leyte</p>
+                  <p><i class="fa fa-phone-alt me-3"></i>+63 991 5200 456</p>
+                  <p><i class="fa fa-envelope me-3"></i>roytech@gmail.com</p>
+                  <div class="d-flex pt-2">
+                      <a class="btn btn-outline-light btn-social" href="https://twitter.com/i/flow/login"><i class="fab fa-x-twitter"></i></a>
+                      <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100088334353562&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                      <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/channel/UCSdufvu8HXEcX8RUDfvCtLQ"><i class="fab fa-youtube"></i></a>
+                      <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                      <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/login"><i class="fab fa-linkedin-in"></i></a>
+                      <a class="btn btn-outline-light btn-social" href="https://github.com/"><i class="fab fa-github"></i></a>
+                  </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                  <h5 class="text-white mb-4">Popular Link</h5>
+                  <a class="btn btn-link" href="aboutus.html">About Us</a>
+                  <a class="btn btn-link" href="contactus.html">Contact Us</a>
+                  <a class="btn btn-link" href="devices.html">Devices</a>
+                  <a class="btn btn-link" href="services.html">Services</a>
+                  
+              </div>
+              <div class="col-md-6 col-lg-3">
+                  <h5 class="text-white mb-4">Our Services</h5>
+                  <a class="btn btn-link" href="devices.html">Free Check Up</a>
+                  <a class="btn btn-link" href="devices.html">Water Damage</a>
+                  <a class="btn btn-link" href="laptopdevices.html">Mother Board Level Repair</a>
+                  <a class="btn btn-link" href="laptopdevices.html">Data Recovery</a>
+                  <a class="btn btn-link" href="laptopdevices.html">OS Upgrade</a>
+              </div>
+          </div>
+      </div>
 
-    <div class="container">
-        <div class="copyright">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start">
-                    &copy; <a class="border-bottom" href="#">RoyTech</a>, All Right Reserved.
+      <div class="container">
+          <div class="copyright">
+              <div class="row">
+                  <div class="col-md-6 text-center text-md-start">
+                      &copy; <a class="border-bottom" href="index.html">RoyTech</a>, All Right Reserved.
 
-                     Distributed By <a class="border-bottom" href="index.html">RoyTech</a>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <div class="footer-menu">
-                        <a href="">Home</a>
-                        <a href="">Inquire</a>
-                        <a href="">Help</a>
-                        <a href="">FAQs</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Footer End -->
+                       Distributed By <a class="border-bottom" href="index.html">RoyTech</a>
+                  </div>
+                  <div class="col-md-6 text-center text-md-end">
+                      <div class="footer-menu">
+                          <a href="index.html">Home</a>
+                          <a href="contactus.html">Inquire</a>
+                          <a href="contactus.html">Help</a>
+                          <a href="index.html">FAQs</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- Footer End -->
 </body>
 </html>
