modified:   aboutus.html 	modified:   contactus.html 	modified:   css/aboutus.css 	modified:   css/contactus.css 	modified:   css/services.css 	modified:   css/styles.css 	modified:   index.html 	deleted:    res/broken.png 	deleted:    res/client1.jpg 	deleted:    res/client2.jpg 	deleted:    res/client3.jpg 	deleted:    res/client4.jpg 	new file:   res/contactus.svg 	deleted:    res/laptop.png 	deleted:    res/lcd.png 	deleted:    res/realme.png 	deleted:    res/realme.webp 	deleted:    res/realme2.png 	deleted:    res/realmelogo.png 	deleted:    res/repair.png 	modified:   services.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <p>
                                 Not Only for Smartphones our laptops also has a LCD Screen, if you want a High Quality and affordable LCD screen just message us.
                             </p>
-                            <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
+                            <a href="devices.html"><input type="button" class="btn text-white" style="background-color: #2d3d6c;" value="Inquire Now"></a>
                         </div>
                     </div>
                     <!-- card ends here -->
@@ -105,8 +105,7 @@
                                 Our Electronic Devices can't function without battery, so if your device battery is damaged
                                 we have High Quality Batteries for you. just pm us.
                             </p>
-                            <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
-                        </div>
+                            <a href="devices.html"><input type="button" class="btn text-white" style="background-color: #2d3d6c;" value="Inquire Now"></a>                        </div>
                     </div>
                     <!-- card ends here -->
                 </div>
@@ -121,8 +120,7 @@
                             <p>
                                 have problem in unlocking your device, we have the best and fast bypassing services. Send us your inquiry now.
                             </p>
-                            <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
-                        </div>
+                            <a href="devices.html"><input type="button" class="btn text-white" style="background-color: #2d3d6c;" value="Inquire Now"></a>                        </div>
                     </div>
                     <!-- card ends here -->
                 </div>
@@ -137,8 +135,7 @@
                             <p>
                                 Software issue has a large scope. the best solution for this is to send us the device and let our team check it for you
                             </p>
-                            <a href="laptopdevices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
-
+                            <a href="laptopdevices.html"><input type="button" class="btn text-white" style="background-color: #2d3d6c;" value="Inquire Now"></a>
                         </div>
                     </div>
                     <!-- card ends here -->
@@ -349,7 +346,7 @@
 
                     <div class="profile">
                          <div class="profile-img">
-                            <img src="./res/client1.jpg" alt="">
+                            <img src="./res/pos1.jpg" alt="">
                         </div>
                         <div class="name-user">
                             <strong>Neymar Malibago</strong>
@@ -379,7 +376,7 @@
 
                     <div class="profile">
                         <div class="profile-img">
-                            <img src="./res/client2.jpg" alt="">
+                            <img src="./res/pos2.jpg" alt="">
                         </div>
                         <div class="name-user">
                             <strong>Ana Macapanas</strong>
@@ -409,11 +406,11 @@
 
                     <div class="profile">
                         <div class="profile-img">
-                            <img src="./res/client3.jpg" alt="">
+                            <img src="./res/pos3.jpg" alt="">
                         </div>
                         <div class="name-user">
-                            <strong>Arlene Manaug</strong>
-                                <span>@lynnemanaug87</span>
+                            <strong>Roberto Manoloto</strong>
+                                <span>@robmanoloto87</span>
                         </div>
                     </div>    
 
@@ -439,7 +436,7 @@
 
                     <div class="profile">
                         <div class="profile-img">
-                            <img src="./res/client4.jpg" alt="">
+                            <img src="./res/pos4.jpg" alt="">
                         </div>
                         <div class="name-user">
                             <strong>Juan De la Cruz</strong>
