--- a/services.html
+++ b/services.html
@@ -55,85 +55,91 @@
     <!--Banner End-->
 
    <!--Our Services Start-->
-<div class="container-fluid our-services mt-5 mb-5">
-<div class="container">
-   
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <div class="icon-wrapper">
-          <i class="fa-solid fa-mobile"></i>
-        </div>
-        <h3>Mobile Repair</h3>
-        <p>
-          Fast Repair for your Mobile Devices.
-        </p>
-        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
+      <div class="container-fluid our-services mt-5 mb-5">
+        <div class="container">
+        
+            <div class="row">
+              <div class="column">
+                <div class="card shadow" id="card-cont">
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-mobile"></i>
+                  </div>
+                  <h3>Mobile Repair</h3>
+                  <p>
+                    Fast Repair for your Mobile Devices.
+                  </p>
+                  <a href="devices.html"><input type="button" class="btn" id="btn" value="Inquire Now"></a>
+                </div>
+              </div>
+
+              <div class="column">
+                <div class="card shadow">
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-laptop"></i>
+                  </div>
+                  <h3>Laptop Repair</h3>
+                  <p>
+                    Software, Hardware Issues we can fix it.
+                  </p>
+                  <a href="laptopdevices.html"><input type="button" class="btn" id="btn" value="Inquire Now"></a>
+                </div>
+              </div>
+
+              <div class="column">
+                <div class="card shadow">
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-print"></i>
+                  </div>
+                  <h3>Hardware Diagnostic</h3>
+                  <p>
+                    We rapair hardware issues from your printers.
+                  </p>
+                  <a href="devices.html"><input type="button" class="btn" id="btn" value="Inquire Now"></a>
+                </div>
+              </div>
+
+              <div class="column">
+                <div class="card shadow">
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-stethoscope"></i>
+                  </div>
+                  <h3>Free Check Up</h3>
+                  <p>
+                    We don't ask for payment when checking for the damaged.
+                  </p>
+                  <a href="devices.html"><input type="button" class="btn" id="btn" value="Inquire Now"></a>
+                </div>
+              </div>
+
+              <div class="column">
+                <div class="card shadow">
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-broom"></i>
+                  </div>
+                  <h3>Service Cleaning</h3>
+                  <p>
+                    this method uses after the check up of the device. to serve you a clean and smooth transaction.
+                  </p>
+                  <a href="laptopdevices.html"><input type="button" class="btn" id="btn" value="Inquire Now"></a>
+                </div>
+              </div>
+
+              <div class="column">
+                <div class="card shadow">
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-microchip"></i>
+                  </div>
+                  <h3>Motherboard Level</h3>
+                  <p>
+                    This method is crucial, our skilled tech will check for the damaged IC.
+                  </p>
+                  <a href="devices.html"><input type="button" class="btn" id="btn" value="Inquire Now"></a>
+                </div>
+              </div>
+            </div>
+        
       </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <div class="icon-wrapper">
-          <i class="fa-solid fa-laptop"></i>
-        </div>
-        <h3>Laptop Repair</h3>
-        <p>
-          Software, Hardware Issues we can fix it.
-        </p>
-        <a href="laptopdevices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
       </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <div class="icon-wrapper">
-          <i class="fas fa-wrench"></i>
-        </div>
-        <h3>Hardware Diagnostic</h3>
-        <p>
-          We rapair hardware issues from your printers.
-        </p>
-        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <div class="icon-wrapper">
-          <i class="fa-solid fa-stethoscope"></i>
-        </div>
-        <h3>Free Check Up</h3>
-        <p>
-          We don't ask for payment when checking for the damaged.
-        </p>
-        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <div class="icon-wrapper">
-          <i class="fa-solid fa-broom"></i>
-        </div>
-        <h3>Service Cleaning</h3>
-        <p>
-          this method uses after the check up of the device. to serve you a clean and smooth transaction.
-        </p>
-        <a href="laptopdevices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <div class="icon-wrapper">
-          <i class="fa-solid fa-microchip"></i>
-        </div>
-        <h3>Motherboard Level</h3>
-        <p>
-          This method is crucial, our skilled tech will check for the damaged IC.
-        </p>
-        <a href="devices.html"><input type="button" class="btn btn-primary" value="Inquire Now"></a>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
     <!--Our Services End-->
 
     <!-- Footer Start -->
